# backend/app/routes/subscriptions.py
@@ -1,65 +1,58 @@
-
-import logging
-import hashlib
-
-from flask import Blueprint, current_app as app, request, jsonify
+from flask import Blueprint, request, jsonify
 import requests
 
-from app.fa import setup_fa
-from app.utils import decode_json_post_data
+subscriptions_bp = Blueprint("subscriptions", __name__)
 
-subscriptions_bp = Blueprint('subscriptions', __name__)
 
-@subscriptions_bp.route("/subscriptions/new", methods=["POST"])
-@decode_json_post_data
-def subscriptions_new():
-    email = request.data.get('email', None)
-    client = setup_fa()
-
-    if email is None:
-        return jsonify({'error': 'Empty email'})
-
-    logging.info(request.data)
-    resp = requests.post(
-        url='http://binoas.openstate.eu/subscriptions/new',
-        json=dict(request.data)
-    )
-
-    client_resp = client.retrieve_user_by_email(email)
-    if not client_resp.was_successful():
-        client_response = client.register({
-            'sendSetPasswordEmail': False,
-            'registration': {
-                'applicationId': app.config['CLIENT_ID'],
-            },
-            'user': {
-                'email': email,
-                'password': hashlib.md5(email.encode('ascii', 'replace')).hexdigest()
-            }
-        })
-        # result = resp.json()
-
-        if not client_response.was_successful():
-            return jsonify(client_response.error_response)
-        else:
-            # TODO: add sending passwordless login here
-            # res = _passwordless_start(client, email)
-            # if (res is not None) and ('error' in res):
-            #     return jsonify(res)
-            return jsonify(resp.json())
-    return jsonify(resp.json())
-
-@subscriptions_bp.route("/subscriptions/delete", methods=["GET"])
+@subscriptions_bp.route("/subscriptions/delete", methods=["POST"])
 def subscriptions_delete():
     resp = requests.delete(
-        url='http://binoas.openstate.eu/subscriptions/delete',
+        url="http://binoas.openstate.eu/subscriptions/delete",
         json={
-            'query_id': request.args.get('query_id', ''),
-            'user_id': request.args.get('user_id', '')
-        }
+            "query_id": request.args.get("query_id", ""),
+            "user_id": request.args.get("user_id", ""),
+        },
     )
     try:
         result = resp.json()
     except Exception as e:
-        result = {'error': 'Er ging iets verkeerd', 'status': 'error', 'msg': str(resp.content)}
+        result = {
+            "error": "Er ging iets verkeerd",
+            "status": "error",
+            "msg": str(resp.content),
+        }
     return jsonify(result)
+
+
+@subscriptions_bp.route("/subscriptions/unsubscribe", methods=["POST"])
+def do_unsubscribe():
+    binoas_user = request.args.get("user_id")
+    if binoas_user is None:
+        return jsonify({"error": "No user_id provided"}), 400
+
+    response = requests.get("http://binoas.openstate.eu/subscriptions")
+
+    if response.status_code != 200:
+        return jsonify({"error": "Error getting subscriptions"}), 500
+
+    subscriptions = response.json()
+
+    try:
+        for subscription in subscriptions["results"]:
+            if subscription["user_id"] != binoas_user:
+                continue
+
+            response = requests.delete(
+                f"http://binoas.openstate.eu/subscriptions/delete/",
+                json={
+                    "user_id": subscription["user_id"],
+                    "query_id": subscription["query_id"],
+                },
+            )
+
+            if response.status_code != 200:
+                return jsonify({"error": "Error deleting subscription"}), 500
+    except:
+        return jsonify({"error": "Error deleting subscriptions"}), 500
+
+    return jsonify({"success": "true"}), 200
